--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ header {
   text-decoration: none;
   padding: 0.3rem 1rem;
   border: 2px solid #e8630a;
+  border-radius: 5px;
   font-size: 1.5rem;
 }
 @media (max-width: 680px) {
@@ -196,9 +197,9 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -450,6 +451,7 @@ header {
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column {
   border: 0.5px solid #b8b6b3;
+  border-radius: 5px;
   -webkit-box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
           box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
   z-index: 1;
@@ -539,6 +541,7 @@ header {
 .section-5 .banner-content .btn-div .contact-btn {
   padding: 0.6rem 2rem;
   border: none;
+  border-radius: 5px;
   background: #e8630a;
   font-size: 1.5rem;
   cursor: pointer;
@@ -552,6 +555,7 @@ header {
   width: 100%;
   height: 100%;
   background: #222831;
+  border-radius: 5px;
   top: 0;
   left: 0;
   z-index: -1;
@@ -607,6 +611,7 @@ header {
 }
 .section-6 .mini-project-content .mini-inner-content {
   border: 0.5px solid #b8b6b3;
+  border-radius: 5px;
   -webkit-box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
           box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
   z-index: 1;
@@ -701,6 +706,7 @@ header {
   font-size: 1.2rem;
   cursor: pointer;
   border: none;
+  border-radius: 5px;
   background: #e8630a;
   color: #fafafa;
   -webkit-transition: 0.2s ease;
@@ -715,6 +721,7 @@ header {
   width: 50%;
   outline: none;
   border: 1px solid #b8b6b3;
+  border-radius: 5px;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
           box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
