--- a/css/style.scss
+++ b/css/style.scss
@@ -99,6 +99,7 @@ header {
         text-decoration: none;
         padding: 0.3rem 1rem;
         border: 2px solid $colorOrange;
+        border-radius: 5px;
         font-size: 1.5rem;
         @include mediaQuery680px(){
             position: absolute;
@@ -175,7 +176,7 @@ header {
 
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     min-height: 80vh;
     letter-spacing: 0.1rem;
@@ -387,6 +388,7 @@ align-items: center;
         }
         .landing-page-column{
             border: .5px solid $colorLightGray;
+            border-radius: 5px;
             box-shadow: 5px 5px 0 2px rgba($color: #000000, $alpha: 0.3);
             z-index: 1;
             transition: 0.2s ease;
@@ -458,6 +460,7 @@ align-items: center;
             .contact-btn{
                 padding: .6rem 2rem;
                 border: none;
+                border-radius: 5px;
                 background: $colorOrange;
                 font-size: 1.5rem;
                 cursor: pointer;
@@ -471,6 +474,7 @@ align-items: center;
                     width: 100%;
                     height: 100%;
                     background: $colorOffBlack;
+                    border-radius: 5px;
                     top: 0;
                     left: 0;
                     z-index: -1;
@@ -516,6 +520,7 @@ align-items: center;
         }
         .mini-inner-content{
             border: .5px solid $colorLightGray;
+            border-radius: 5px;
             box-shadow: 5px 5px 0 2px rgba($color: #000000, $alpha: 0.3);
             z-index: 1;
             transition: 0.2s ease;
@@ -591,6 +596,7 @@ align-items: center;
                     font-size: 1.2rem;
                     cursor: pointer;
                     border: none;
+                    border-radius: 5px;
                     background: $colorOrange;
                     color: $backgroundLightGray;
                     transition: 0.2s ease;
@@ -604,7 +610,7 @@ align-items: center;
                     width: 50%;
                     outline: none;
                     border: 1px solid $colorLightGray;
-                 
+                    border-radius: 5px;
                     font-family: Arial, Helvetica, sans-serif;
                     box-shadow: 5px 5px 0 0 rgba($color: black, $alpha: 0.3);
                     @include mediaQuery780px(){
