--- a/css/style.css
+++ b/css/style.css
@@ -317,6 +317,9 @@ header {
   margin: 0;
   padding-bottom: 1rem;
 }
+.about-me-container .about-me-content p {
+  letter-spacing: 0.05rem;
+}
 .about-me-container .about-column {
   width: 48%;
 }
@@ -404,6 +407,9 @@ header {
 .modal-container .modal-content h1 {
   color: #e8630a;
 }
+.modal-container .modal-content .paragraph {
+  letter-spacing: 0.05rem;
+}
 
 .modal-container.open {
   opacity: 1;
@@ -412,7 +418,7 @@ header {
 
 /* Landing Page Project */
 .section-4 {
-  min-height: 80vh;
+  min-height: 90vh;
   padding: 2rem 0;
   background: #2b4353;
   letter-spacing: 0.1rem;
@@ -454,24 +460,17 @@ header {
   border-radius: 5px;
   -webkit-box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
           box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  -webkit-transition: 0.2s ease;
-  transition: 0.2s ease;
 }
 @media (max-width: 680px) {
   .section-4 .landing-page-container .landing-page-content .landing-page-column {
     width: 80%;
   }
 }
-.section-4 .landing-page-container .landing-page-content .landing-page-column:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-}
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description {
   padding: 0.8rem 0.3rem;
+  color: #fafafa;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description p {
-  margin: 0;
   padding: 0.5rem;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description .bold-text {
@@ -480,6 +479,18 @@ header {
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description small {
   padding: 0.5rem;
   font-style: italic;
+}
+.section-4 .landing-page-container .landing-page-content .landing-page-column .description .view-btn {
+  background: #e8630a;
+  padding: 0.2rem 0.5rem;
+  margin-left: 0.5rem;
+  border-radius: 5px;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+.section-4 .landing-page-container .landing-page-content .landing-page-column .description .view-btn:hover {
+  background: #fafafa;
+  color: #2b4353;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column img {
   width: 100%;
@@ -614,28 +625,18 @@ header {
   border-radius: 5px;
   -webkit-box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
           box-shadow: 5px 5px 0 2px rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  -webkit-transition: 0.2s ease;
-  transition: 0.2s ease;
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 @media (max-width: 680px) {
   .section-6 .mini-project-content .mini-inner-content {
     width: 80%;
   }
 }
-.section-6 .mini-project-content .mini-inner-content:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-}
 .section-6 .mini-project-content .mini-inner-content .description {
   padding: 0.8rem 0.3rem;
+  color: #fafafa;
 }
 .section-6 .mini-project-content .mini-inner-content .description p {
-  margin: 0;
   padding: 0.5rem;
-  color: #fafafa;
 }
 .section-6 .mini-project-content .mini-inner-content .description .bold-text {
   font-weight: bold;
@@ -643,7 +644,19 @@ header {
 .section-6 .mini-project-content .mini-inner-content .description small {
   padding: 0.5rem;
   font-style: italic;
+}
+.section-6 .mini-project-content .mini-inner-content .view-btn {
+  background: #e8630a;
+  padding: 0.2rem 0.5rem;
+  margin-left: 0.5rem;
+  border-radius: 5px;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
   color: #fafafa;
+}
+.section-6 .mini-project-content .mini-inner-content .view-btn:hover {
+  background: #fafafa;
+  color: #2b4353;
 }
 .section-6 .mini-project-content .mini-inner-content a {
   text-decoration: none;
