--- a/css/style.scss
+++ b/css/style.scss
@@ -273,6 +273,9 @@ header {
             margin: 0;
             padding-bottom: 1rem;
         }
+        p{
+            letter-spacing: 0.05rem;
+                }
     }
     .about-column{
         width: 48%;
@@ -350,7 +353,9 @@ header {
         h1{
             color: $colorOrange;
         }
-        
+        .paragraph{
+            letter-spacing: 0.05rem;
+        }
     }
     
 }
@@ -361,7 +366,7 @@ header {
 
 /* Landing Page Project */
 .section-4{
-min-height: 80vh;
+min-height: 90vh;
 padding: 2rem 0;
 background: $colorBlue;
 letter-spacing: 0.1rem;
@@ -390,19 +395,14 @@ align-items: center;
             border: .5px solid $colorLightGray;
             border-radius: 5px;
             box-shadow: 5px 5px 0 2px rgba($color: #000000, $alpha: 0.3);
-            z-index: 1;
-            transition: 0.2s ease;
             @include mediaQuery680px(){
                 width: 80%;
             }
-            &:hover{
-                transform: scale(1.05);
-            }
-           
+            
             .description{
                 padding: 0.8rem 0.3rem;
+                color: $backgroundLightGray;
                 p{
-                    margin: 0;
                     padding: 0.5rem;
                 }
                 .bold-text{
@@ -411,6 +411,17 @@ align-items: center;
                 small{
                     padding: 0.5rem;
                     font-style: italic;
+                }
+                .view-btn{
+                    background: $colorOrange;
+                    padding: 0.2rem 0.5rem;
+                    margin-left: 0.5rem;
+                   border-radius: 5px;
+                   transition: 0.2s ease-in-out;
+                   &:hover{
+                    background: $backgroundLightGray;
+                    color: $colorBlue;
+                   }
                 }
             }
             img{
@@ -522,21 +533,15 @@ align-items: center;
             border: .5px solid $colorLightGray;
             border-radius: 5px;
             box-shadow: 5px 5px 0 2px rgba($color: #000000, $alpha: 0.3);
-            z-index: 1;
-            transition: 0.2s ease;
-            object-fit: contain;
             @include mediaQuery680px(){
                 width: 80%;
             }
-            &:hover{
-                transform: scale(1.05);
-            }
             .description{
                 padding: 0.8rem 0.3rem;
+                color: $backgroundLightGray;
                 p{
-                    margin: 0;
                     padding: 0.5rem;
-                    color: $backgroundLightGray;
+                    
                 }
                 .bold-text{
                     font-weight: bold;
@@ -544,8 +549,19 @@ align-items: center;
                 small{
                     padding: 0.5rem;
                     font-style: italic;
-                    color: $backgroundLightGray;
                 }
+            }
+            .view-btn{
+                background: $colorOrange;
+                    padding: 0.2rem 0.5rem;
+                    margin-left: 0.5rem;
+                   border-radius: 5px;
+                   transition: 0.2s ease-in-out;
+                   color: $backgroundLightGray;
+                   &:hover{
+                    background: $backgroundLightGray;
+                    color: $colorBlue;
+                   }
             }
            
             a{
