12/18/22, change icon color

--- a/css/style.scss
+++ b/css/style.scss
@@ -305,6 +305,7 @@ header {
                 font-size: 3rem;
                 color: $navLinkColor;
                 padding-bottom: 0.5rem;
+                color: $colorOrange;
                 
             }
         }
