--- a/css/style.css
+++ b/css/style.css
@@ -196,9 +196,9 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -206,7 +206,7 @@ header {
   letter-spacing: 0.1rem;
 }
 .container h1 {
-  font-size: calc(5vw + 10px);
+  font-size: calc(3vw + 26px);
   color: #fafafa;
   margin: 0;
 }
@@ -230,7 +230,7 @@ header {
 
 /* About Me Section */
 .section-1 {
-  min-height: 80vh;
+  min-height: 100vh;
   letter-spacing: 0.1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -238,24 +238,25 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding: 1rem 0;
   background: #2b4353;
+  gap: 1.5rem;
 }
 
 .about-me-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 @media (max-width: 950px) {
   .about-me-container {
@@ -496,6 +497,7 @@ header {
   width: 100%;
   max-height: 550px;
   border-bottom: 0.5px solid #fafafa;
+  border-radius: 4px 4px 0 0;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column a {
   text-decoration: none;
@@ -670,6 +672,7 @@ header {
 .section-6 .mini-project-content .mini-inner-content .img-div img {
   width: 100%;
   max-height: 550px;
+  border-radius: 4px 4px 0 0;
 }
 
 /* Section 6, Contact Form */
