--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,12 @@ $colorBlue: #2b4353;
 $colorOffBlack: #222831;
 $titleFontSize: 5vw;
 
+
+@mixin mediaQuery1120px(){
+    @media(max-width: 1120px) {
+        @content;
+    }
+}
 @mixin mediaQuery950px(){
     @media(max-width: 950px){
         @content;
@@ -175,12 +181,12 @@ header {
 
 .container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     min-height: 80vh;
     letter-spacing: 0.1rem;
     h1 {
-        font-size: calc(5vw + 10px);
+        font-size: calc(3vw + 26px);
         color: $backgroundLightGray;
         margin: 0;
     }
@@ -208,20 +214,21 @@ header {
 
 /* About Me Section */
 .section-1 {
-    min-height: 80vh;
+    min-height: 100vh;
     letter-spacing: 0.1rem;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding: 1rem 0;
     background: $colorBlue;
+    gap: 1.5rem;
 }
 
 .about-me-container {
    display: flex;
-   justify-content: space-between;
+   justify-content: center;
    align-items: flex-start;
-   gap: 1rem;
+   gap: 1.5rem;
     @include mediaQuery950px(){
         flex-direction: column;
         align-items: center;
@@ -428,6 +435,7 @@ align-items: center;
                 width: 100%;
                 max-height: 550px;
                 border-bottom: 0.5px solid $backgroundLightGray;
+                border-radius: 4px 4px 0 0;
             }
             a{
                 text-decoration: none;
@@ -576,6 +584,7 @@ align-items: center;
                 img{
                     width: 100%;
                    max-height: 550px;
+                   border-radius: 4px 4px 0 0;
                 }
             }
         }
