--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ header {
   list-style: none;
   display: inline-block;
   cursor: pointer;
-  padding: 1rem;
+  padding: 1rem 2rem;
 }
 .navbar ul li a {
   text-decoration: none;
@@ -227,10 +227,50 @@ header {
 .container .intro-content a:hover {
   color: #e8630a;
 }
+.container .intro-content .resume-btn {
+  margin-top: 0.5rem;
+  padding: 0.5rem 1rem;
+  background: #e8630a;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  color: #fafafa;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+  position: relative;
+  z-index: 1;
+}
+.container .intro-content .resume-btn::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background: #fafafa;
+  -webkit-transition: 0.25s ease-in;
+  transition: 0.25s ease-in;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  border-radius: 5px;
+}
+.container .intro-content .resume-btn:hover {
+  color: #e8630a;
+}
+.container .intro-content .resume-btn:hover::after {
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
 
 /* About Me Section */
 .section-1 {
-  min-height: 100vh;
+  min-height: 50vh;
   letter-spacing: 0.1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -238,9 +278,9 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 1rem 0;
   background: #2b4353;
   gap: 1.5rem;
